<resources>
    <string name="app_name">My Application PSV</string>

    <!--    меню-->
    <string name="journal">Журнал</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--    настройки-->
    <string name="settings_personal_data">Личные данные</string>
    <string name="settings_surname">Фамилия</string>
    <string name="settings_name">Имя</string>
    <string name="settings_patronymic">Отчество</string>
    <string name="settings_graph">График</string>
    <string name="settings_top_of_the_green_line">Верхняя граница зеленой зоны</string>
    <string name="settings_top_of_the_yellow_line">Верхняя граница желтой зоны</string>
    <string name="settings_top_of_the_red_line">Верхняя граница красной зоны</string>
    <string name="settings_lower_limit_of_the_red">Нижняя граница</string>
    <string name="settings_automatic_calculation">Автоматический расчет</string>
    

</resources>